editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__named__context.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(context)]
struct NamedWithContext {
    cause: String,
    fix: String,
    incident_id: u64,
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for NamedWithContext {
    fn label(&self) -> &'static str {
        match self {
            Self { cause: _cause, fix: _fix, incident_id: _incident_id } => {
                "NamedWithContext"
            }
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self { cause: _cause, fix: _fix, incident_id: _incident_id } => {
                axum::http::StatusCode::INTERNAL_SERVER_ERROR
            }
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        None
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self { cause: _cause, fix: _fix, incident_id: _incident_id } => {
                std::collections::HashMap::from([
                    (
                        "cause".to_owned(),
                        serde_json::to_value(_cause)
                            .expect("failed to serialize context entry cause"),
                    ),
                    (
                        "fix".to_owned(),
                        serde_json::to_value(_fix)
                            .expect("failed to serialize context entry fix"),
                    ),
                    (
                        "incident_id".to_owned(),
                        serde_json::to_value(_incident_id)
                            .expect("failed to serialize context entry incident_id"),
                    ),
                ])
            }
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: "NamedWithContext",
                sub_label: None,
                message_template: None,
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "cause",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                    crate::views::error::ContextEntry {
                        key: "fix",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                    crate::views::error::ContextEntry {
                        key: "incident_id",
                        schema: <u64 as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ]);
        responses
    }
}
impl utoipa::IntoResponses for NamedWithContext {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for NamedWithContext {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
