editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__named__error.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[error("named error")]
#[view_error(context)]
struct NamedError {
    source: std::io::Error,
    context: String,
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for NamedError {
    fn label(&self) -> &'static str {
        match self {
            Self { source: _source, context: _context } => "NamedError",
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self { source: _source, context: _context } => {
                axum::http::StatusCode::INTERNAL_SERVER_ERROR
            }
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        None
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self { source: _source, context: _context } => {
                std::collections::HashMap::from([
                    (
                        "context".to_owned(),
                        serde_json::to_value(_context)
                            .expect("failed to serialize context entry context"),
                    ),
                ])
            }
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: "NamedError",
                sub_label: None,
                message_template: Some("named error"),
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "context",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ]);
        responses
    }
}
impl utoipa::IntoResponses for NamedError {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for NamedError {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
