editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__named__status.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(status = UNAUTHORIZED)]
struct Named {
    field: String,
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Named {
    fn label(&self) -> &'static str {
        match self {
            Self { field: _field } => "Named",
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self { field: _field } => axum::http::StatusCode::UNAUTHORIZED,
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        None
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self { field: _field } => std::collections::HashMap::from([]),
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: "Named",
                sub_label: None,
                message_template: None,
                status: axum::http::StatusCode::UNAUTHORIZED,
                context: Vec::from([]),
            },
        ]);
        responses
    }
}
impl utoipa::IntoResponses for Named {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Named {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
